--- a/proxy-server.conf
+++ b/proxy-server.conf
@@ -3,79 +3,68 @@
 ####################################################
 [pipeline:main]
 pipeline = catch_errors gatekeeper healthcheck proxy-logging cache container_sync bulk tempurl ratelimit tempauth container-quotas account-quotas slo dlo proxy-logging proxy-server
-# pipeline = bulk tempurl ratelimit tempauth container-quotas account-quotas slo dlo proxy-logging proxy-server
 
 [app:proxy-server]
-# use = egg:swift#proxy
-paste.app_factory = swift.proxy.server:app_factory
+use = egg:swift#proxy
+
 
 [filter:proxy-logging]
-# use = egg:swift#proxy_logging
-paste.filter_factory = swift.common.middleware.proxy_logging:filter_factory
+use = egg:swift#proxy_logging
 
 
 [filter:dlo]
-# use = egg:swift#dlo
-paste.filter_factory = swift.common.middleware.dlo:filter_factory
+use = egg:swift#dlo
+
 
 [filter:slo]
-# use = egg:swift#slo
-paste.filter_factory = swift.common.middleware.slo:filter_factory
+use = egg:swift#slo
+
 
 [filter:account-quotas]
-# use = egg:swift#account_quotas
-paste.filter_factory = swift.common.middleware.account_quotas:filter_factory
+use = egg:swift#account_quotas
 
 
 [filter:container-quotas]
-# use = egg:swift#container_quotas
-paste.filter_factory = swift.common.middleware.container_quotas:filter_factory
+use = egg:swift#container_quotas
 
 
 [filter:tempauth]
-# use = egg:swift#tempauth
-paste.filter_factory = swift.common.middleware.tempauth:filter_factory
+use = egg:swift#tempauth
 
 
 [filter:ratelimit]
-# use = egg:swift#ratelimit
-paste.filter_factory = swift.common.middleware.ratelimit:filter_factory
+use = egg:swift#ratelimit
 
 
 [filter:tempurl]
-# use = egg:swift#tempurl
-paste.filter_factory = swift.common.middleware.tempurl:filter_factory
+use = egg:swift#tempurl
 
 
 [filter:bulk]
-# use = egg:swift#bulk
-paste.filter_factory = swift.common.middleware.bulk:filter_factory
+use = egg:swift#bulk
+
 
 [filter:container_sync]
-# use = egg:swift#container_sync
-paste.filter_factory = swift.common.middleware.container_sync:filter_factory
+use = egg:swift#container_sync
 
 
 [filter:cache]
-# use = egg:swift#memcache
-paste.filter_factory = swift.common.middleware.memcache:filter_factory
+use = egg:swift#memcache
 
 
 [filter:proxy-logging]
-# use = egg:swift#proxy_logging
-paste.filter_factory = swift.common.middleware.proxy_logging:filter_factory
+use = egg:swift#proxy_logging
+
 
 [filter:healthcheck]
-# use = egg:swift#healthcheck
-paste.filter_factory = swift.common.middleware.healthcheck:filter_factory
-
+use = egg:swift#healthcheck
 
 [filter:gatekeeper]
-# use = egg:swift#gatekeeper
-paste.filter_factory = swift.common.middleware.gatekeeper:filter_factory
+use = egg:swift#gatekeeper
+# paste.filter_factory = swift.common.middleware.gatekeeper:filter_factory
 
 
 [filter:catch_errors]
-# use = egg:swift#catch_errors
-paste.filter_factory = swift.common.middleware.catch_errors:filter_factory
+use = egg:swift#catch_errors
+# paste.filter_factory = swift.common.middleware.catch_errors:filter_factory
 
