Added 'run-time pipeline modifier' (sujon's work)

--- a/etc/proxy-server.conf
+++ b/etc/proxy-server.conf
@@ -2,7 +2,8 @@
 ############### swift config example ###############
 ####################################################
 [pipeline:main]
-pipeline = catch_errors gatekeeper healthcheck proxy-logging cache container_sync bulk tempurl ratelimit tempauth container-quotas account-quotas slo dlo proxy-logging proxy-server
+# pipeline = catch_errors gatekeeper healthcheck proxy-logging cache container_sync bulk tempurl ratelimit tempauth container-quotas account-quotas slo dlo proxy-logging proxy-server
+pipeline = proxy-server
 
 [app:proxy-server]
 use = egg:swift#proxy
