--- a/etc/proxy-server.conf
+++ b/etc/proxy-server.conf
@@ -2,8 +2,7 @@
 ############### swift config example ###############
 ####################################################
 [pipeline:main]
-# pipeline = catch_errors gatekeeper healthcheck proxy-logging cache container_sync bulk tempurl ratelimit tempauth container-quotas account-quotas slo dlo proxy-logging proxy-server
-pipeline = proxy-server
+pipeline = catch_errors gatekeeper healthcheck proxy-logging cache container_sync bulk tempurl ratelimit tempauth container-quotas account-quotas slo dlo proxy-logging proxy-server
 
 [app:proxy-server]
 use = egg:swift#proxy
