--- a/etc/proxy-server.conf
+++ b/etc/proxy-server.conf
@@ -3,7 +3,7 @@
 ####################################################
 [pipeline:main]
 # pipeline = catch_errors gatekeeper healthcheck proxy-logging cache container_sync bulk tempurl ratelimit tempauth container-quotas account-quotas slo dlo proxy-logging proxy-server
-pipeline = proxy-server
+pipeline = healthcheck proxy-server
 
 [app:proxy-server]
 use = egg:swift#proxy
