--- a/etc/proxy-server.conf
+++ b/etc/proxy-server.conf
@@ -6,6 +6,7 @@ pipeline = catch_errors gatekeeper healthcheck proxy-logging cache container_syn
 
 [app:proxy-server]
 use = egg:swift#proxy
+test = abc
 
 
 [filter:proxy-logging]
