--- a/etc/proxy-server.conf
+++ b/etc/proxy-server.conf
@@ -1,6 +1,14 @@
 ####################################################
 ############### swift config example ###############
 ####################################################
+[DEFAULT]
+# bind_ip = 0.0.0.0
+bind_port = 8080
+# bind_timeout = 30
+# backlog = 4096
+# swift_dir = /etc/swift
+# user = swift 
+
 [pipeline:main]
 # pipeline = catch_errors gatekeeper healthcheck proxy-logging cache container_sync bulk tempurl ratelimit tempauth container-quotas account-quotas slo dlo proxy-logging proxy-server
 pipeline = proxy-server
